--- a/study/Pandas/lc_number.ipynb
+++ b/study/Pandas/lc_number.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 번호. 제목"
+    "# 번호. 제목\n",
+    "* 링크"
    ]
   },
   {
@@ -12,6 +13,19 @@
    "metadata": {},
    "source": [
     "## 문제"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "문제"
    ]
   },
   {
@@ -25,7 +39,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 코드"
+    "코드"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 설명"
    ]
   },
   {
