--- a/study/query/lc_1164.md
+++ b/study/query/lc_1164.md
@@ -1,13 +1,14 @@
-# 리트코드 : 1164. Product Price at a Given Date
-* https://leetcode.com/problems/product-price-at-a-given-date/description/
+리트코드 : 1164. Product Price at a Given Date
+===
+
+* [[link]](https://leetcode.com/problems/product-price-at-a-given-date/description/)
 <br>
 
 ---
 
 ## 문제
 ```text
-문제
-table: Products
+Table: Products
 
 +---------------+---------+
 | Column Name   | Type    |
@@ -52,53 +53,86 @@ Output:
 +------------+-------+
 ```
 
+* `8월 16일의 PRICE 구하기`
+
 <br>
 
 ## 문제 풀이
 
 ### **MySQL**
 ```SQL
-with temp as (
-    select *, min(order_date) as d1, min(customer_pref_delivery_date) as d2
-    from delivery
-    group by customer_id
+WITH B16 AS (
+    SELECT *
+    FROM (
+        SELECT PRODUCT_ID, NEW_PRICE AS PRICE_A,
+            ROW_NUMBER() OVER (PARTITION BY PRODUCT_ID ORDER BY CHANGE_DATE DESC) AS IDX
+        FROM PRODUCTS
+        WHERE CHANGE_DATE <= '2019-08-16') AS B
+    WHERE IDX = 1
 ),
-cnt_filtered as (
-    select *, count(*) as cnt_f
-    from temp
-    where d1 = d2
+A16 AS (
+    SELECT *
+    FROM (
+        SELECT PRODUCT_ID, NEW_PRICE AS PRICE_B,
+            ROW_NUMBER() OVER (PARTITION BY PRODUCT_ID ORDER BY CHANGE_DATE ASC) AS IDX
+        FROM PRODUCTS
+        WHERE CHANGE_DATE > '2019-08-16') AS A
+    WHERE IDX = 1
 ),
-cnt_all as (
-    select *, count(*) as cnt_a
-    from temp
-)
+TEMP AS (
+    SELECT B.PRODUCT_ID, B.PRICE_A, A.PRICE_B
+    FROM B16 B
+    LEFT JOIN A16 A ON B.PRODUCT_ID = A.PRODUCT_ID
 
-select round(100*cnt_f/cnt_a,2) as immediate_percentage 
-from cnt_all, cnt_filtered
+    UNION
+
+    SELECT A.PRODUCT_ID, B.PRICE_A, A.PRICE_B
+    FROM B16 B
+    RIGHT JOIN A16 A ON B.PRODUCT_ID = A.PRODUCT_ID
+    )
+
+SELECT PRODUCT_ID,
+        CASE
+            WHEN PRICE_A IS NULL THEN 10
+            ELSE PRICE_A
+        END AS PRICE
+FROM TEMP
 ```
 
-* 각 유저별로 첫 주문을 가져오면 된다.
-* 주문 날짜, 발송 날짜의 최소값이 서로 같은 쿼리를 찾는다.
-* 두 테이블의 row를 count로 세주고 roundv
+* 호흡이 길어서 조금 난도가 있었다.
+* 첫 번째로는 8.16일을 기점으로 테이블을 수평분할하기.
+* 각 분할 테이블에서 날짜를 기준으로 ROW_NUMBER를 부여하고, IDX = 1인 정보들을 가져온다.
+* BEFORE 16 테이블에서는 DESC로 해서 날짜가 가장 큰 것, AFTER 16 테이블에서는 ASC로 해서 날짜가 가장 작은 것
+* 이후 두 테이블을 OUTER JOIN해주기. MYSQL도 OUTER JOIN 지원 해라...
+* 8.16 이전 변경 데이터가 없으면 10, 그게 아니면 변경 이후 데이터를 가져오면 된다.
   
 ### **Pandas**
 ```python
 import pandas as pd
 
-def immediate_food_delivery(delivery: pd.DataFrame) -> pd.DataFrame:
-    temp = delivery.groupby('customer_id').agg(d1=('order_date', 'min'),
-                                               d2=('customer_pref_delivery_date', 'min')).reset_index()
+def price_at_given_date(products: pd.DataFrame) -> pd.DataFrame:
+
+    cutoff_date = pd.to_datetime('2019-08-16')
+
+    b16 = (products[products['change_date'] <= cutoff_date]
+           .sort_values(by=['product_id', 'change_date'], ascending=[True, False])
+           .drop_duplicates('product_id', keep='first')
+           .rename(columns={'new_price': 'price_a'}))
     
-    answer = pd.DataFrame({'immediate_percentage':
-                            [round(len(temp[temp['d1']==temp['d2']])*100/len(temp),2)]})
-    return answer
+    a16 = (products[products['change_date'] > cutoff_date]
+           .sort_values(by=['product_id', 'change_date'], ascending=[True, True])
+           .drop_duplicates('product_id', keep='first')
+           .rename(columns={'new_price': 'price_b'}))
+    
+    temp = pd.merge(b16, a16, on='product_id', how='outer')
+    temp['price'] = temp.apply(lambda row: 10 if pd.isna(row['price_a']) else (row['price_a'] if pd.isna(row['price_b']) else row['price_a']), axis=1)
+
+    return temp[['product_id', 'price']]
 ```
 
-* groupby + agg로 위 풀이랑 비슷하게 주문날짜, 배송날짜의 min값을 가져온다.
-* pandas에서는 len으로 바로 처리한다.
+* 같은 로직으로
   
 <br>
 
 ### **코멘트**
-* 노트북 바꾸고, 시험이랑 일이랑 이것저것 하다보니까 너무 쉬어버렸다...
-* 파이썬에서 groupby + agg + 컬럼설정 이 부분 연습하기
+* 요 근래 풀었던 리트코드 쿼리중에 제일 어려운듯
